--- a/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
@@ -41,6 +41,12 @@
             	<b:navLink value="View Territories" href="#{request.contextPath}/northwind/viewTerritories.xhtml"></b:navLink>
             	<b:navLink value="New Territory" href="#{request.contextPath}/northwind/territoryDetail.xhtml"></b:navLink>
         	</b:dropMenu>
+        	<b:dropMenu value="Shippers">
+            	<b:navLink value="View Shippers" href="#{request.contextPath}/northwind/viewShippers.xhtml"></b:navLink>
+        	</b:dropMenu>
+        	<b:dropMenu value="Categories">
+            	<b:navLink value="View Categories" href="#{request.contextPath}/northwind/viewCategories.xhtml"></b:navLink>
+        	</b:dropMenu>
         	
         	
         </b:navbarLinks>
