Simplifed and improved CRUD example on Shipper to use more CDI features

--- a/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
@@ -42,7 +42,9 @@
             	<b:navLink value="New Territory" href="#{request.contextPath}/northwind/territoryDetail.xhtml"></b:navLink>
         	</b:dropMenu>
         	<b:dropMenu value="Shippers">
-            	<b:navLink value="View Shippers" href="#{request.contextPath}/northwind/viewShippers.xhtml"></b:navLink>
+            	<b:navLink value="Create" href="#{request.contextPath}/northwind/shipper/createShipper.xhtml"></b:navLink>
+            	<b:navLink value="View" href="#{request.contextPath}/northwind/shipper/viewShippers.xhtml"></b:navLink>
+            	<b:navLink value="Edit" href="#{request.contextPath}/northwind/shipper/editShipper.xhtml"></b:navLink>
         	</b:dropMenu>
         	<b:dropMenu value="Categories">
             	<b:navLink value="View Categories" href="#{request.contextPath}/northwind/viewCategories.xhtml"></b:navLink>
