--- a/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
@@ -63,6 +63,15 @@
             	<b:navLink value="View Categories" href="#{request.contextPath}/northwind/viewCategories.xhtml"></b:navLink>
         	</b:dropMenu>
         	
+        	<b:dropMenu value="Reports">
+            	<b:navLink value="Category Sales Charts" href="#{request.contextPath}/northwind/report/categorySalesChartReport.xhtml"></b:navLink>
+            	<b:navLink value="Category Sales Table" href="#{request.contextPath}/northwind/report/categorySalesTableReport.xhtml"></b:navLink>
+        	</b:dropMenu>
+        	
+        	<b:dropMenu value="Queries">
+            	<b:navLink value="View Order by OrderID" href="#{request.contextPath}/northwind/query/viewOrder.xhtml"></b:navLink>
+            	<b:navLink value="View Order by Customer" href="#{request.contextPath}/northwind/query/viewOrderByCustomer.xhtml"></b:navLink>
+        	</b:dropMenu>
         	
         </b:navbarLinks>
         
