Added example on using Facelet Composition component.

--- a/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
@@ -69,8 +69,10 @@
         	</b:dropMenu>
         	
         	<b:dropMenu value="Queries">
-            	<b:navLink value="View Order by OrderID" href="#{request.contextPath}/northwind/query/viewOrder.xhtml"></b:navLink>
-            	<b:navLink value="View Order by Customer" href="#{request.contextPath}/northwind/query/viewOrderByCustomer.xhtml"></b:navLink>
+            	<b:navLink value="Order by OrderID" href="#{request.contextPath}/northwind/query/viewOrder.xhtml"></b:navLink>
+            	<b:navLink value="Order by Customer" href="#{request.contextPath}/northwind/query/viewOrderByCustomer.xhtml"></b:navLink>
+            	<b:navLink value="Order by OrderID Using Composition" href="#{request.contextPath}/northwind/query/viewOrderUsingComposition.xhtml"></b:navLink>
+            	<b:navLink value="Order by Customer Using Composition" href="#{request.contextPath}/northwind/query/viewOrderByCustomerUsingComposition.xhtml"></b:navLink>
         	</b:dropMenu>
         	
         </b:navbarLinks>
