--- a/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/templates/template-northwind.xhtml
@@ -77,6 +77,20 @@
         	
         </b:navbarLinks>
         
+         <h:form>  
+	        <b:navbarLinks pull="right">
+	        	<b:navLink value="Sign In" outcome="/northwind/query/viewOrder" rendered="#{not sessionController.loggedIn}">
+	        	</b:navLink>  
+	        	
+	        	<b:navLink value="Change Password" outcome="/security/changePassword" 
+	        		rendered="#{sessionController.loggedIn}">
+	        	</b:navLink>  
+	        	
+	       		<b:navCommandLink value="Logout #{sessionController.remoteUser}" action="#{sessionController.logout()}" 
+	       			rendered="#{sessionController.loggedIn}">
+	       		</b:navCommandLink>	        
+			</b:navbarLinks>
+		</h:form>
 
     </b:navBar>
 
